--- a/_pages/team.html
+++ b/_pages/team.html
@@ -19,8 +19,8 @@ author_profile: true
   </li>
 	<li><strong>  Kailun Bai</strong>, 2020.09 – Present<br>	
 	 <!--	Internship:  <br>  -->
-  Award: (2020.09) UVic Facuty of Graduate Studies Entrance Scholarship <br> <!--,   <font color="blue">$5,000</font> <br> -->
-  Award: (2022.9-2023.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $19,000 </font> <br> -->
+  Award 1: (2020.09) UVic Facuty of Graduate Studies Entrance Scholarship <br> <!--,   <font color="blue">$5,000</font> <br> -->
+  Award 2: (2022.9-2023.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $19,000 </font> <br> -->
 		<!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
@@ -28,8 +28,9 @@ author_profile: true
 	
 	<li><strong>  Yushan Hu</strong> , 2021.09 – Present<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
  <!--	Internship:  <br>  -->
-Award: (2021.9-2023.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $19,000 </font> <br> -->
- <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
+Award 1: (2021.9-2023.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $19,000 </font> <br> -->
+  <!-- Award2: (2022.07-2022.12) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
+  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
@@ -95,9 +96,9 @@ Award 2: (2021.09-2022.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <fo
 
 <ul>
 	<li><strong>  Danielle Tsao (UVic) </strong> , 2021.05 – Present<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
-Award1: (2021.05-2021.08) NSERC Undergraduate Student Research Awards <br>
-Award2: (2021.09-2022.04) Biotalent SWPP <br>
-Award3: (2022.05-2022.08) Science Emerging Researcher Award (SERA) <br>		
+Award 1: (2021.05-2021.08) NSERC Undergraduate Student Research Awards <br>
+Award 2: (2021.09-2022.04) Biotalent SWPP <br>
+Award 3: (2022.05-2022.08) Science Emerging Researcher Award (SERA) <br>		
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
@@ -172,9 +173,9 @@ First job: PhD student, <a href="https://uwaterloo.ca/statistics-and-actuarial-s
   <li><strong>  <a href="https://studentweb.uvic.ca/~thddhks1256/webpage.html"> Songwan Joun </a></strong> (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask), 2021.4<br>
  <!--	Internship:  <br>  -->
 	 Research Assistant: (2019.05 -2019.08) Department of Mathematics and Statistics, UVic <br>
-	 Award1: (2019.09-2020.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $16,000 </font> <br> -->
+	 Award 1: (2019.09-2020.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $16,000 </font> <br> -->
 	 Internship: (2020.01-2020.06) <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver   <br>
-	 Award2: (2020.07-2020.12) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
+	 Award 2: (2020.07-2020.12) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
 First job: International Rice Research Institute  <br> 
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
